Toolbar alignment fix

--- a/packages/basehub/src/next/toolbar/toolbar.module.scss
+++ b/packages/basehub/src/next/toolbar/toolbar.module.scss
@@ -276,6 +276,7 @@
   font-size: 16px;
   padding-right: 8px;
   padding-bottom: 0px;
+  padding-top: 0px;
   margin-bottom: 2px;
   min-width: 80px;
   max-width: 250px;
